--- a/package.json
+++ b/package.json
@@ -1,20 +1,20 @@
 {
-  "name": "blog",
-  "version": "1.0.0",
-  "description": "A simple blog api",
-  "main": "index.js",
-  "type": "module",
-  "scripts": {
-    "start": "nodemon app.js"
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "express": "^4.21.2",
-    "mongoose": "^8.9.5"
-  },
-  "devDependencies": {
-    "@types/express": "^5.0.0",
-    "nodemon": "^3.1.9"
-  }
+   "name": "blog",
+   "version": "1.0.0",
+   "description": "A simple blog api",
+   "main": "index.js",
+   "type": "module",
+   "scripts": {
+      "start": "nodemon server.js"
+   },
+   "author": "",
+   "license": "ISC",
+   "dependencies": {
+      "express": "^4.21.2",
+      "mongoose": "^8.9.5"
+   },
+   "devDependencies": {
+      "@types/express": "^5.0.0",
+      "nodemon": "^3.1.9"
+   }
 }
