updated the blog codebase

--- a/config.env
+++ b/config.env
@@ -1,4 +1,5 @@
-NODE_ENV = development;
-USERNAME = admin
-PASSWORD = devbambam
-PORT = 8080
+NODE_ENV=development;
+MONGO_DB_URI="mongodb+srv://ayogood18:U1QgXKIewE4YCOKB@cluster0.s9rem.mongodb.net/bloggerAPI?retryWrites=true&w=majority&appName=Cluster0"
+USERNAME=admin
+PASSWORD=devbambam
+PORT=8080
