--- a/config.env
+++ b/config.env
@@ -3,3 +3,4 @@ MONGO_DB_URI="mongodb+srv://ayogood18:U1QgXKIewE4YCOKB@cluster0.s9rem.mongodb.ne
 USERNAME=admin
 PASSWORD=devbambam
 PORT=8080
+SECRET_KEY='bambam'
